# Nvidia

./: README.md  run_all.ps1
Backend/: CMakeLists.txt
Backend/data/: README.md
Backend/src/: main.cpp
Backend/src/core/: memory_mapper.cpp  memory_mapper.h  padic_quantizer.cpp  padic_quantizer.h
Backend/src/cuda/: padic_engine.cpp  padic_engine.h
Backend/src/cuda/kernels/: padic_math.cuh  padic_search.cu
Backend/src/cuda/utils/: cuda_check.h
Backend/src/server/: http_server.cpp  http_server.h
Backend/src/utils/: json_utils.h  logger.h
Frontend/: README.md  next.config.js  package-lock.json  package.json  tailwind.config.js
Frontend/src/app/: layout.tsx  page.tsx
Frontend/src/app/api/logs/: route.ts
Frontend/src/app/api/metrics/: route.ts
Frontend/src/app/api/search/: route.ts
Frontend/src/app/api/vectors/upload/: route.ts
Frontend/src/components/: MetricsDashboard.tsx  SearchPanel.tsx  UltrametricTreeVisualizer.tsx
Frontend/src/lib/: api.ts
Frontend/src/styles/: globals.css
